Fixed border showing on article listing on mobile

--- a/style.css
+++ b/style.css
@@ -482,6 +482,7 @@ Article view: [id*="writing-"] becomes [id*="journal-"]
   margin: 1em 0 3em 0 !important;
   border-radius: 0 !important;
   display: block !important;
+  border: none !important;
 }
 @media screen and (min-width: 32em) {
   .notion-collection-list__item {
